examples/invalid/parsing/duplicateLabels.ordinis
x : { foo : Foo, foo : Bar }
